Entity package comments, removal of obsolete code and completion of last TODO tasks